--- a/HTML5/Javascript/Projects/tic tac toe/TIC TAC TOE GAME/css/style.css
+++ b/HTML5/Javascript/Projects/tic tac toe/TIC TAC TOE GAME/css/style.css
@@ -1,7 +1,7 @@
 .game {
     width: 600px;
     height: 600px;
-    margin: 0 auto;
+    margin: 100px auto;
     background-color: #34495e;
     color: #fff;
     border: 6px solid #2c3e50;
@@ -20,3 +20,13 @@
     justify-content: center;
     align-items: center;
 } 
+.game > div:nth-child(10) {
+    grid-column: 1/4; justify-items: center;
+    background-color: #2c3e50;
+} 
+.game > div:nth-child(10) input {
+    border-radius: 20px;
+    font-size: 15px;    
+    padding: 10px;
+    font-family: 'Times New Roman', Times, serif;
+}
