--- a/HTML5/css/projects/Facebook/css/style.css
+++ b/HTML5/css/projects/Facebook/css/style.css
@@ -334,7 +334,6 @@ section.news > .main{
 }
 section.news > .main > .header{
     display:flex;
-    justify-content: space-between;
 }
 
 section.news > .main > .content > .logo{ padding: 10px 30px;}
@@ -348,17 +347,40 @@ aside.sidebar-direita{
     border: 1px solid rgb(0, 0, 0);
     grid-column:11/14;
 }
-aside.sidebar-direita .chat-box {
+aside.sidebar-direita .games{
+    background-color: yellow;
+    display: flex;
+    justify-content: center;
+}
+aside.sidebar-direita .games > div {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
     
+}
+aside.sidebar-direita .games > div img{
+    border-radius: 100px;
+}
+aside.sidebar-direita .games > div img:nth-child(1){
+    grid-column: 1/7;
+    grid-row: 1/3;
+    width: 70px;
+    height: 70px;
+}
+aside.sidebar-direita .games > div img:nth-child(2){
+    grid-column: 3/5;
+    grid-row: 2/4;
+    width: 40px;
+    height: 40px;
 }
 aside.sidebar-direita .chat-box > .active-user > a{
-    display: flex;
+    display: grid;
     border: 1px solid black;
-    justify-content: space-evenly;
     align-items: center;
-    width: 60%;
-    
+    width: 100%;
+    grid-template-columns: 12% 70% 10%;
+    padding: 5px 10px;    
 }
+
 aside.sidebar-direita .chat-box > .active-user > a > img{
     width:30px ;
     height: 30px;
